# times-api

./: .gitignore  .pre-commit-config.yaml  PROJECT_SUMMARY.md  README.md  article_models.py  dashboard_insights_analysis.md  explore_dashboard_data.sql  ingest_most_popular.py  most_popular_models.py  pyproject.toml  requirements.txt  run_daily_ingestion.sh  scheduler.py  transform_archive.py  transform_most_popular.py
.github/workflows/: archive-ingest.yml  daily-ingest.yml  dbt-run.yml  deploy-function.yml  quality.yml
archive/: __init__.py  ingest.py  models.py  transform.py
cloud_function/: backfill.py  config.py  load_archive.py  load_most_popular.py  main.py  requirements.txt
dashboard/: .env.example  .gitignore  README.md  requirements.txt
dashboard/pages/: 1_📰_Archive_Overview.py
dashboard/utils/: bigquery_utils.py  chart_utils.py
dbt_nyt_analytics/: .gitignore  README.md  dbt_project.yml  profiles.yml.example  setup_gcp_service_account.sh
dbt_nyt_analytics/docs/: service_account_setup.md
dbt_nyt_analytics/macros/: generate_schema_name.sql  get_incremental_filter.sql
dbt_nyt_analytics/models/: sources.yml
dbt_nyt_analytics/models/marts/analytics/: _analytics.yml  agg_articles_by_month.sql  agg_author_performance.sql  agg_keyword_trends.sql  agg_section_trends.sql
dbt_nyt_analytics/models/marts/core/: _core.yml  dim_authors.sql  dim_keywords.sql  dim_sections.sql  fct_article_popularity.sql  fct_articles.sql
dbt_nyt_analytics/models/staging/: _staging.yml  stg_archive_articles.sql  stg_most_popular_articles.sql
dbt_nyt_analytics/tests/: assert_archive_row_count_positive.sql  assert_staging_matches_source_grain.sql
infra/: create_bq_tables.sh  deploy.sh
most_popular/: __init__.py  ingest.py  models.py  transform.py
schema/: archive_articles.json  archive_articles_staging.json  most_popular_articles.json
tests/: __init__.py  test_archive_transform.py  test_most_popular_transform.py
