[project]
name = "times-api"
version = "0.1.0"
description = "NYT Article ingestion: Archive API and Most Popular API to raw/slim NDJSON and GCS."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "idna>=3.11",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "schedule>=1.2.0",
    "urllib3>=2.6.3",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
    "types-requests>=2.31",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
